# dailyia

./: .gitignore  Makefile  README.md
dailyia-api/: .env.dist  Cargo.toml
dailyia-api/migrations/: 20250504130306_init.up.sql
dailyia-api/src/: main.rs
dailyia-api/src/data_layer/entities/: user.rs
dailyia-api/src/data_layer/repos/: user_repo.rs
dailyia-api/src/infra/: config.rs  db.rs
dailyia-ui/: .env.dist  .prettierrc.json  README.md  index.html  package.json  vite.config.ts
dailyia-ui/src/: App.vue  main.ts
dailyia-ui/src/assets/: base.css
dailyia-ui/src/assets/styles/: _variables.scss  fonts.css  global.scss
dailyia-ui/src/components/basic/: DBtn.vue  DTextField.vue
dailyia-ui/src/components/quests/: QuestList.vue
dailyia-ui/src/layouts/: DefaultLayout.vue
dailyia-ui/src/plugins/: d-components.ts
dailyia-ui/src/views/: HomeView.vue
