[package]
name = "dailyia-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15" # for loading .env

[[bin]]
name = "dailyia-api"
path = "src/main.rs"